--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,13 +1,8 @@
-doctype html
-html
-  head
-    title= title
-    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css")
-  body
-    h1= message
-    p Đây là trang đầu tiên sử dụng pug.
+extends layouts/default.pug
+include mixins/box-head.pug
 
-    button( class = "btn btn-success") click me 
+block main 
+  h1 trang chu 
 
-    script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js") 
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js") 
+  //- call ham.
+  +box-head()
