--- a/src/views/client/pages/home/index.pug
+++ b/src/views/client/pages/home/index.pug
@@ -1,9 +1,5 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body 
-    h1 trang chu . 
+extends ../../layout/default 
+
+block main 
+  h1 Trang chu .
 
