--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -1,1 +1,16 @@
-header Header 
+header 
+  .header
+    .container 
+      .header-box
+        .row 
+          .col-3 
+            .inner-logo 
+              img(src="/image/logo.png", alt="")
+          .col-9
+            .inner-menu 
+              ul 
+                li 
+                  a(href="/") Home 
+                li 
+                  a(href="/products") Products  
+
