--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -4,6 +4,9 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title #{title}
+    link(rel="stylesheet" href="/css/boostrap.css")
+    link(rel="stylesheet", href="/css/base.css")
+    link(rel="stylesheet" href="/css/style.css")
 
   body 
     include ../partials/header.pug 
@@ -11,5 +14,8 @@ html(lang="en")
     block main 
 
     include ../partials/footer.pug 
+
+    script(src="/js/boostrap.js") 
+    script(src="/js/script.js") 
 
 
