--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -2,6 +2,6 @@ sider.sider
   .inner-menu 
     ul 
       li  
-        a(href=`${prefixAdmin}/dashboard`) Dashboard
+        a(href=`/admin/dashboard`) Dashboard
       li 
-        a(href=`${prefixAdmin}/products`) Products
+        a(href=`/admin/products`) Products
