--- a/src/public/admin/css/style.css
+++ b/src/public/admin/css/style.css
@@ -55,3 +55,11 @@ a{
   background-color: #F0F0F0;
 }
 
+.body .table-products{
+  width: 100%;
+  border-radius:5px ;
+  -webkit-border-radius:5px ;
+  -moz-border-radius:5px ;
+  -ms-border-radius:5px ;
+  -o-border-radius:5px ;
+}
