--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -19,6 +19,6 @@ html(lang="en")
         block main 
 
     script(src="/js/boostrap.js") 
-    script(src="/js/script.js") 
+    script(src="/admin/js/script.js") 
 
 
