update status product

--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -20,5 +20,6 @@ html(lang="en")
 
     script(src="/js/boostrap.js") 
     script(src="/admin/js/script.js") 
+    script(src="/admin/js/products.js") 
 
 
