--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -39,12 +39,25 @@ block main
           td #{item.price}$
           td
             if item.status == 'active'
-              a(href="#" class="badge text-bg-success") Hoạt động
+              a(href="#" class="badge text-bg-success"
+                change-status = `${item.status}-${item._id}`
+              ) Hoạt động
             else
-              a(href="#" class="badge text-bg-danger") Không hoạt động
+              a(href="#" class="badge text-bg-danger"
+              change-status = `${item.status}-${item._id}`
+              ) Không hoạt động
           td
             button(class="btn btn-warning btn-sm") Sửa
             button(class="btn btn-danger btn-sm ml-1") Xóa
-            
+
   +pagination(pagination)
+
+  form(
+    action= ""
+    method="POST"
+    id = "form-change-status"
+    data-path = `/admin/products/change-status`
+    ) 
+
+  
   
