--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 include ../../mixins/listButtonStatus.pug
 include ../../mixins/formSearch.pug
 include ../../mixins/pagination.pug
+include ../../mixins/form-change-multi.pug
 
 block main 
   h1 Danh sach Sản phẩm
@@ -15,9 +16,17 @@ block main
         .col-6 
           +formSearch(keyword)
 
-  table.table.table-hover.table-sm
+  +form-change-multi()
+
+        
+  table(
+    class = "table table-hover table-sm"
+    checkbox-all 
+  )
     thead
       tr
+        th 
+          input(type="checkbox", name="checkAll")
         th STT
         th Hình ảnh
         th Tiêu đề
@@ -27,6 +36,8 @@ block main
     tbody
       each item , index in products
         tr
+          td 
+            input(type="checkbox", name="id" value = item._id)
           td #{index + 1}
           td
             img(
