--- a/src/views/admin/mixins/form-change-multi.pug
+++ b/src/views/admin/mixins/form-change-multi.pug
@@ -11,7 +11,7 @@ mixin form-change-multi ()
             select(name="type" class="form-control")
               option(value="active") Hoạt động
               option(value="inactive") Dừng hoạt động
-              option(value="delete") Xóa
+              option(value="delete") Xóa tất cả 
 
           .form-group
             input(
