--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -59,7 +59,10 @@ block main
               ) Không hoạt động
           td
             button(class="btn btn-warning btn-sm") Sửa
-            button(class="btn btn-danger btn-sm ml-1") Xóa
+            button(class="btn btn-danger btn-sm ml-1"
+              data-id = item._id
+              button-delete
+            ) Xóa
 
   +pagination(pagination)
 
@@ -68,6 +71,12 @@ block main
     method="POST"
     id = "form-change-status"
     data-path = `/admin/products/change-status`
+    ) 
+  form(
+    action= ""
+    method="POST"
+    id = "form-delete"
+    data-path = `/admin/products/delete`
     ) 
 
   
