--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -4,6 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title #{title}
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
     link(rel="stylesheet" href="/css/boostrap.css")
     link(rel="stylesheet" href="/admin/css/style.css")
 
@@ -12,9 +13,9 @@ html(lang="en")
     include ../partials/header.pug
 
     .body 
-      
+
       include ../partials/sider.pug
-        
+
       .main 
         block main 
 
