--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -3,8 +3,13 @@ include ../../mixins/listButtonStatus.pug
 include ../../mixins/formSearch.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
+include ../../mixins/box-alert.pug
 
 block main 
+  +box-alert(5000)
+
+
+
   h1 Danh sach Sản phẩm
 
   .card.mb-3.text-start
@@ -18,7 +23,7 @@ block main
 
   +form-change-multi()
 
-        
+
   table(
     class = "table table-hover table-sm"
     checkbox-all 
@@ -26,7 +31,7 @@ block main
     thead
       tr
         th 
-          input(type="checkbox", name="checkAll")
+          input(type="checkbox" name="checkAll")
         th STT
         th Hình ảnh
         th Tiêu đề
@@ -37,7 +42,7 @@ block main
       each item , index in products
         tr
           td 
-            input(type="checkbox", name="id" value = item._id)
+            input(type="checkbox" name="id" value = item._id)
           td #{index + 1}
           td
             img(
@@ -72,12 +77,10 @@ block main
     id = "form-change-status"
     data-path = `/admin/products/change-status`
     ) 
+
   form(
     action= ""
     method="POST"
     id = "form-delete"
     data-path = `/admin/products/delete`
     ) 
-
-  
-  
