--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -21,8 +21,10 @@ block main
         .col-6 
           +formSearch(keyword)
 
-  +form-change-multi()
-
+  .card.mb-4
+    .card-header
+      +form-change-multi()
+      a(href="/admin/products/create" class="btn btn-outline-success")  + Thêm mới
 
   table(
     class = "table table-hover table-sm"
