--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -6,7 +6,7 @@ include ../../mixins/form-change-multi.pug
 include ../../mixins/box-alert.pug
 
 block main 
-  +box-alert(5000)
+  +box-alert-success(5000)
 
 
 
