--- a/src/views/admin/mixins/box-alert.pug
+++ b/src/views/admin/mixins/box-alert.pug
@@ -1,15 +1,15 @@
 mixin box-alert-success(time)
   - if(success.length > 0)
-      div(
-        class = "alert alert-success"
-        show-alert 
-        data-time = time
-        )
-          span  #{success}
-          i(class="fa-solid fa-delete-left" close-alert)
+    div(
+      class = "alert alert-success"
+      show-alert 
+      data-time = time
+      )
+        span  #{success}
+        i(class="fa-solid fa-delete-left" close-alert)
 
 mixin box-alert-error(time)
-  if messages.error && messages.error.length > 0 
+  if error && error.length > 0 
     div(
       class = "alert alert-danger"
       show-alert 
