--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -6,7 +6,9 @@ include ../../mixins/form-change-multi.pug
 include ../../mixins/box-alert.pug
 
 block main 
+  +box-alert-warning(5000)
   +box-alert-success(5000)
+  +box-alert-error(5000)
 
   h1 Danh sach Sản phẩm
 
@@ -48,12 +50,13 @@ block main
             input(type="checkbox" name="id" value = item._id)
           td #{index + 1}
           td
-            img(
-              src=item.thumbnail,
-              alt=item.title,
-              width="100px",
-              height="auto"
-            )
+            a(href=`/admin/products/edit/${item._id}`) 
+              img(
+                src=item.thumbnail,
+                alt=item.title,
+                width="100px",
+                height="auto"
+              )
           td #{item.title}
           td #{item.price}$
           td
@@ -66,11 +69,14 @@ block main
               change-status = `${item.status}-${item._id}`
               ) Không hoạt động
           td
-            button(class="btn btn-warning btn-sm") Sửa
+            a(class="btn btn-warning btn-sm"
+              href = `/admin/products/edit/${item._id}`
+              button-edit
+             ) Sửa
             button(class="btn btn-danger btn-sm ml-1"
               data-id = item._id
               button-delete
-            ) Xóa
+              ) Xóa
 
   +pagination(pagination)
 
