--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -83,6 +83,7 @@ block main
   form(
     action= ""
     method="POST"
+    currentPage = pagination.currentPage
     id = "form-change-status"
     data-path = `/admin/products/change-status`
     ) 
