--- a/src/views/admin/pages/product/index.pug
+++ b/src/views/admin/pages/product/index.pug
@@ -77,6 +77,9 @@ block main
               data-id = item._id
               button-delete
               ) Xóa
+            a(href=`/admin/products/detail/${item._id}`
+              class = "btn btn-secondary btn-sm "
+              ) Chi tiết
 
   +pagination(pagination)
 
