detail product client

--- a/src/public/client/css/style.css
+++ b/src/public/client/css/style.css
@@ -99,3 +99,51 @@
 .inner-discount {
   color: green;
 }
+
+
+/* Show Alert */
+
+[show-alert]{
+  position: fixed; /* Giữ vị trí cố định trên màn hình */
+  top: 70px; /* Cách mép trên 70px */
+  right: 15px; /* Cách mép phải 15px */
+  z-index: 9999; /* Đảm bảo nó luôn nằm trên cùng */
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 1; /* Mặc định là hiện, sẽ dùng JS để thêm class ẩn */
+  transition: opacity 0.3s ease; /* Thêm transition cho opacity nếu muốn mờ dần */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+[show-alert].alert-hidden {
+  animation-name: alert-hidden; /* Tên animation đã định nghĩa */
+  animation-duration: 0.5s; /* Thời gian chạy animation là 0.5 giây */
+  animation-fill-mode: both; /* Giữ trạng thái cuối cùng của animation */
+}
+
+/* Định nghĩa keyframes cho hiệu ứng ẩn */
+@keyframes alert-hidden {
+  from {
+    right: 15px; /* Bắt đầu từ vị trí hiện tại (15px từ phải) */
+    opacity: 1; /* Mặc định là hiện */
+  }
+  to {
+    right: -100%; /* Dịch chuyển ra ngoài màn hình về phía bên phải */
+    opacity: 0; /* Mờ dần */
+    display: none; /* Cuối cùng ẩn hoàn toàn phần tử */
+  }
+}
+
+.body [show-alert] span{
+  font-weight: 600;
+}
+
+.body [show-alert] i{
+  margin-left: 10px; 
+  cursor: pointer; 
+  font-size : 20px ; 
+}
+/* End Show Alert */
