--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -5,7 +5,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title #{title}
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
-    link(rel="stylesheet" href="/css/boostrap.css")
+    link(rel="stylesheet" href="/client/css/boostrap.css")
     link(rel="stylesheet" href="/admin/css/style.css")
 
   body
@@ -19,6 +19,6 @@ html(lang="en")
       .main 
         block main 
 
-    script(src="/js/boostrap.js") 
+    script(src="/client/js/boostrap.js") 
     script(src="/admin/js/script.js") 
     script(src="/admin/js/products.js") 
