--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -4,9 +4,10 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title #{title}
-    link(rel="stylesheet" href="/css/boostrap.css")
-    link(rel="stylesheet", href="/css/base.css")
-    link(rel="stylesheet" href="/css/style.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
+    link(rel="stylesheet" href="/client/css/boostrap.css")
+    link(rel="stylesheet" href="/client/css/base.css")
+    link(rel="stylesheet" href="/client/css/style.css")
 
   body 
     include ../partials/header.pug 
@@ -15,7 +16,7 @@ html(lang="en")
 
     include ../partials/footer.pug 
 
-    script(src="/js/boostrap.js") 
-    script(src="/js/script.js") 
+    script(src="/client/js/boostrap.js") 
+    script(src="/client/js/script.js") 
 
 
