config for tinyMCE

--- a/src/views/admin/pages/product/create.pug
+++ b/src/views/admin/pages/product/create.pug
@@ -20,9 +20,10 @@ block main
 
         .form-group.mb-3
           label(for="description") Mô tả
-          textarea(name="description", 
+          textarea(
+            name="description", 
             style = "height: 100px; witdh : 100%",
-            class = "form-control" id="description")
+            class = "form-control textarea-mce" id="description")
 
         .form-group.mb-3
           label(for="price") Giá sản phẩm
