--- a/src/views/admin/pages/product/detail.pug
+++ b/src/views/admin/pages/product/detail.pug
@@ -20,7 +20,7 @@ block main
         .col-md-6
           p 
             strong Mô tả: 
-            | #{product.description}
+            | !{product.description}
         .col-md-6
           p 
             strong Giảm giá: 
