--- a/src/views/admin/pages/product/edit.pug
+++ b/src/views/admin/pages/product/edit.pug
@@ -27,7 +27,7 @@ block main
           label(for="description") Mô tả
           textarea(name="description", 
             style = "height: 100px; witdh : 100%",
-            class = "form-control" id="description") #{product.description || ""} 
+            class = "form-control textarea-mce" id="description") #{product.description || ""} 
 
         .form-group.mb-3
           label(for="price") Giá sản phẩm
