--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -20,5 +20,7 @@ html(lang="en")
         block main 
 
     script(src="/client/js/boostrap.js") 
+    script(src="/tinymce/tinymce.min.js")
+    script(src="/admin/js/tinymce-config.js")
     script(src="/admin/js/script.js") 
     script(src="/admin/js/products.js") 
