--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -5,3 +5,5 @@ sider.sider
         a(href=`/admin/dashboard`) Dashboard
       li 
         a(href=`/admin/products`) Products
+      li 
+        a(href=`/admin/category`) Category
