--- a/src/views/admin/mixins/formSearch.pug
+++ b/src/views/admin/mixins/formSearch.pug
@@ -9,4 +9,4 @@ mixin formSearch(keyword)
         value = keyword ? keyword : ''
         ,
       )
-      button(type="submit" class="btn btn-primary") Tìm kiếm
+      button(type="submit" class="btn btn-primary") <i class="fa-solid fa-magnifying-glass"></i>
