--- a/src/views/admin/partials/header.pug
+++ b/src/views/admin/partials/header.pug
@@ -2,5 +2,6 @@ header.header
   .contaier 
     .row.align-item-center
       .col-3 
-        a(href="/admin/dashboard") ADMIN  
+        a(href="/admin/dashboard") 
+         <i class="fa-solid fa-user-tie"></i> 
       .col-9
