--- a/src/views/admin/pages/category/index.pug
+++ b/src/views/admin/pages/category/index.pug
@@ -14,7 +14,10 @@ block main
         .col-6 
            span Thông tin danh mục
         .col-6.text-end
-          a(href="/admin/category/create" class="btn btn-outline-success") + Thêm mới
+          a(href="/admin/category/create" class="btn btn-outline-success")  
+            <i class="fa-solid fa-plus"></i> Tạo mới
+            
+              
     .card-body
       table(
         class = "table table-hover table-sm"
