--- a/src/views/admin/mixins/select-tree.pug
+++ b/src/views/admin/mixins/select-tree.pug
@@ -1,6 +1,6 @@
-mixin select-tree(records, level)
+mixin select-tree(records , parentId = "" , level)
   each item in records
     - const prefix = Array(level + 1 ).join("-- ")
-    option(value=item._id) #{prefix}#{item.title}
+    option(value=item.id selected = (item.id === parentId ? true : false)) #{prefix}#{item.title}
       if item.children && item.children.length > 0
-        +select-tree( item.children , level + 1)
+        +select-tree( item.children , parentId , level + 1)
