--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -7,3 +7,5 @@ sider.sider
         a(href=`/admin/products`) Products
       li 
         a(href=`/admin/category`) Category
+      li
+        a(href="/admin/role") Roles 
