--- a/src/views/admin/pages/role/index.pug
+++ b/src/views/admin/pages/role/index.pug
@@ -1,7 +1,11 @@
 extends ../../layout/default.pug
+includes ../../mixins/box-alert.pug
 
 block main 
   h1 role
+
+  +box-alert-success(5000)
+  +box-alert-error(5000)
 
   .card.mb-3 
     .card-header 
@@ -27,20 +31,18 @@ block main
                   td #{index + 1}
                   td #{item.title}
                   td #{item.description}
-                  td 
-                    a(
-                      href=`/admin/roles/detail/${item.id}`
-                      class = "btn btn-secondary"
-                      class = "chinhSua"
-                      ) chi tiet 
-                    a(href=`/admin/roles/edit/${item.id}`
-                      class = "btn btn-success"
-
-                    ) Sua 
-                    a(
-                      href=`/admin/roles/delete/${item.id}`
-                      class = "btn btn-danger"
-                    ) Xoa  
+                  td
+                    a(class="btn btn-warning btn-sm"
+                      href = `/admin/role/edit/${item._id}`
+                      button-edit
+                    ) <i class="fa-solid fa-pen-to-square"></i>
+                    button(class="btn btn-danger btn-sm ml-1"
+                      data-id = item._id
+                      button-delete
+                      ) <i class="fa-solid fa-trash"></i>
+                    a(href=`/admin/role/detail/${item._id}`
+                      class = "btn btn-secondary btn-sm "
+                      ) <i class="fa-solid fa-circle-info"></i>
             else 
               tr 
                 td chua co nhom quyen
