--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -9,3 +9,5 @@ sider.sider
         a(href=`/admin/category`) Category
       li
         a(href="/admin/role") Roles 
+      li 
+        a(href="/admin/role/permission") permission
