--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -11,3 +11,5 @@ sider.sider
         a(href="/admin/role") Roles 
       li 
         a(href="/admin/role/permission") permission
+      li  
+        a(href="/admin/account") account
