--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -13,3 +13,7 @@ sider.sider
         a(href="/admin/role/permission") permission
       li  
         a(href="/admin/account") account
+  .box-logout 
+    a(href="/admin/auth/logout" class = "box-login") 
+      span Đăng xuất
+      <i class="fa-solid fa-right-from-bracket"></i> 
